website/jobs/static/cssfiles/style2.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Rubik", Calibri, ui-serif;
}

/* Body styles */
body {
    background-color: #585656;
}

/* Container styles */
.container {
    max-width: 900px;
    margin: 0 auto;
}

/* Form styles */
.apply_box {
    max-width: 600px;
    padding: 20px;
    margin: 0 auto;
    margin-top: 50px;
    border: 1px solid #ccc;
    box-shadow: 0 4px 24px -8px rgb(13, 0, 0);
    border-radius: 5px;
    margin-bottom: 10px;
    background-color: #333; /* Same as .bodyy */
}

.form_container {
    margin-top: 30px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 20px;
}

.form_control {
    display: flex;
    flex-direction: column;
}

label {
    font-size: 20px;
    margin-bottom: 20px;
    color:#fff;
}
h1{
    color:#fff
}

input,
select,
textarea {
    padding: 6px 10px;
    font-size: 15px;
    margin-top: 10px;
    background-color:  #333;


}
input{
    border:none;
    border:1px solid  #7c7b7b;
    color:#fff
}

input:focus,
textarea:focus,
select:focus {
    outline-color: #E60;
}

.button_submit {
    display: flex;
    justify-content: flex-start;
    margin-top: 20px;
}

button {
    background-color: #ff7707; /* Same as .jobs-list-container .details-btn */
    border: 1px solid #fff; /* Same as .jobs-list-container .details-btn */
    padding: 5px 15px;
    color: #fff; /* Same as .jobs-list-container .details-btn */
    cursor: pointer;
    border-radius: 5px;
    transition: 0.3s ease-in;
}

button:hover {
    background-color: #ff7707; /* Same as .jobs-list-container .details-btn */
    border: 1px solid #fff; /* Same as .jobs-list-container .details-btn */
    transition: 0.3s ease-out;
}

.textarea_control {
    grid-column: 1 / span 2;
}

.textarea_control textarea {
    width: 100%;
}

@media (max-width: 460px) {
    .textarea_control {
        grid-column: 1 / span 1;
    }
}

/* Additional styles for .bodyy and .jobs-list-container */

